--- a/README
+++ b/README
@@ -5,6 +5,36 @@ You need Pfeed when you are creating extensible logs or status / activity update
 
 
 
+Description
+
+What is feed?
+Feed is the collection of activity logs which is generated while you perform operations(CRUD) on model objects.
+
+Whats so special?, Why should I bother about it?
+Imagine you want to create admin console for your app to monitor what all is happening in your web apps ,i.e how users are using different parts of application. You will need to think of mechanism to capture the logs and then display in some logical manner.
+
+OR 
+
+Imagine you are building an app like facebook and you want to capture all activity user is performing and display to it to her friends/group member/admin , Its a whole new feature whose implementation will force you to dig into design of your app and see where all the logs get generated and then to whom all the logs are going to be published.
+
+What if I give you a generalized information model which will allow you to create such feature by keeping it completely isolated from your existing logic? and What if it is scalable enough
+
+Ok so what's a generalized information model of a feed item?
+
+A Feed is logically composed of
+
+   1. Originator (User /System /Admin ) : Entity which originated this feed item
+   2. Participant Entity(s) : Entity(ies) which are involved in activity (Typically in social networking space these are Friend[User], Event, Group)
+   3. Time : When was the item created
+   4. Audience : This determines , Who will get this feed item (Single User/ Neighbors [with in 1 KM] / Group Members / Followers ).
+   5. Expiry : Time when the item becomes irrelevant in the system
+   6. Title Template : This is a text template which uses originator & participants information to form one line title.There can be different template for different audience
+   7. Interaction Template : This is a view that renders interaction area of the feed item
+  
+
+
+
+
 Example
 =======
 
